--- a/src/App.css
+++ b/src/App.css
@@ -6,405 +6,19 @@
 
 
 
-/* @import url("https://fonts.googleapis.com/css2?family=Great+Vibes&family=Sacramento&display=swap"); */
-::-webkit-scrollbar-button {
-  display: none;
-}
-
-::-webkit-scrollbar {
-  width: 2px;
-  height: 2px;
-}
-
-::-webkit-scrollbar-thumb {
-  background: rgba(255, 255, 255, 0.15);
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  cursor: pointer;
-}
-
-::-webkit-scrollbar-track {
-  background: transparent;
-  width: calc(2px * 2);
-  border: 2px solid rgba(26, 26, 26, 0);
-}
-
-::-webkit-scrollbar-track-piece {
-  background: transparent;
-  width: calc(2px / 2);
-  border: 2px solid rgba(26, 26, 26, 0);
-}
-
-body {
-  scrollbar-face-color: rgba(255, 255, 255, 0.15);
-  scrollbar-track-color: transparent;
-}
-
-div {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-
-:root {
-  /* font-size: 5vmin; */
-}
-
-body {
-  /* display: grid;
-  top: 0;
-  left: 0;
-  width: 100vw; */
-  /* height: 100vh; */
-  /* margin: 0;
-  padding: 0;
-  font-family: "Sacramento", cursive; */
-  /* color: #fff; */
-  /* background: #333; */
-  /* background-image: radial-gradient(ellipse at bottom left, #00a3cb 40%, rgba(0, 163, 203, 0) 40%), radial-gradient(ellipse at top right, #00a3cb 30%, rgba(0, 163, 203, 0) 30%), linear-gradient(to right, #625793 0%, #625793 33%, #d55d64 33%, #d55d64 66%, #e49129 66%); */
-  /* background-size: 50% 100%; */
-}
-body .message {
-  position: absolute;
-  right: 0.5vw;
-  top: 1vw;
-  max-width: 60vw;
-  font-size: 12px;
-  font-family: "Open Sans", sans-serif;
-}
-body .message a {
-  color: inherit;
-  text-decoration: none;
-  border-bottom: 1px solid #444;
-}
-body .message a:hover {
-  border-width: 3px;
-}
-body .card {
-  /* margin: auto; */
-  padding: 2em;
-  border-radius: 1em;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  text-shadow: 0 0 1em rgba(0, 0, 0, 0.5);
-  background: rgba(255, 255, 255, 0.2);
-  -webkit-backdrop-filter: blur(20px);
-          backdrop-filter: blur(20px);
-  transform: perspective(500px);
-  transform-style: preserve-3d;
-}
-body .card .welcome {
-  font-family: "Sacramento", cursive;
-  transform: translateZ(20px);
-}
-body .card .year {
-  font-family: "Great Vibes", cursive;
-  font-size: 2.5em;
-}
-body .card .year span {
-  display: block;
-  transform: translateZ(40px);
-}
-body .card .year span:nth-child(2) {
-  padding-left: 1em;
-  transform: translateZ(60px);
-}
-body .card .year span:nth-child(3) {
-  padding-left: 2em;
-  transform: translateZ(80px);
-}
-
-.container {
-  position: relative;
-  /* width: 19%; */
-}
-
-.image {
-  opacity: 1;
-  display: block;
-  width: 308px;
-  height : 284px;
-  /* height: auto; */
-  transition: .5s ease;
-  backface-visibility: hidden;
-  border-radius: 20px;
-  box-shadow: 0px 10px 10px 10px lightgray;
-}
-
-.middle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.container:hover .image {
-  opacity: 0.3;
-}
-
-.container:hover .middle {
-  opacity: 1;
-}
-
-.text {
-  background-color: #D2B889;
-  color: rgb(6, 98, 27);
-  font-size: 17px;
-  padding: 16px 32px;
-  font-weight: 600;
-}
-
-.detail{
-  width: 30rem;
-  height: 20rem;
-  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
-  border-radius: 5px;
-  position: relative;
-  z-index: 1;
-  background: inherit;
-  overflow: hidden;
-}
-
-.detail:before {
-  content: "";
-  position: absolute;
-  background: inherit;
-  z-index: -1;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
-  filter: blur(10px);
-  margin: -20px;
-}
-
-
-/* activities */
-
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
-
-
-/* body {
-background: #DFC2F2;
-	background-image: linear-gradient( to right, #ffffb3,#ffe6e6);
-	background-attachment: fixed;	
-	background-size: cover;
-  
-	} */
-
-#contained{
-	box-shadow: 0 15px 30px 1px grey;
-	background: rgba(255, 255, 255, 0.90);
-	text-align: center;
-	border-radius: 5px;
-	overflow: hidden;
-	margin: 5em auto;
-	height: 330px;
-	width: 600px;
-  border-radius: 20px;
-  
-	
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap'); */
 
 
 
-.product-details {
-	position: relative;
-	text-align: left;
-	overflow: hidden;
-	padding: 30px;
-	height: 100%;
-	float: left;
-	width: 40%;
-
-}
-
-#contained .product-details h1{
-	font-family: 'Bebas Neue', cursive;
-	display: inline-block;
-	position: relative;
-	font-size: 30px;
-	color: #344055;
-	margin: 0;
-	
-}
-
-#contained .product-details h1:before{
-	position: absolute;
-	content: '';
-	right: 0%; 
-	top: 0%;
-	transform: translate(25px, -15px);
-	font-family: 'Bree Serif', serif;
-	display: inline-block;
-	background: #ffe6e6;
-	border-radius: 5px;
-	font-size: 14px;
-	padding: 5px;
-	color: white;
-	margin: 0;
-	animation: chan-sh 6s ease infinite;
-
-}
 
 
-
-	
-
-
-.hint-star {
-	display: inline-block;
-	margin-left: 0.5em;
-	color: gold;
-	width: 50%;
-}
-
-
-#contained .product-details > p {
-font-family: 'EB Garamond', serif;
-	text-align: center;
-	font-size: 18px;
-	color: #7d7d7d;
-	
-}
-.control{
-	position: absolute;
-	bottom: 20%;
-	left: 22.8%;
-	
-}
-.btn {
-
-	transform: translateY(0px);
-	transition: 0.3s linear;
-	background:  #809fff;
-	border-radius: 5px;
-  position: relative;
-  overflow: hidden;
-	cursor: pointer;
-	outline: none;
-	border: none;
-	color: #eee;
-	padding: 0;
-	margin: 0;
-	
-}
-
-.btn:hover{transform: translateY(-6px);
-	background: #1a66ff;}
-
-.btn span {
-	font-family: 'Farsan', cursive;
-	transition: transform 0.3s;
-	display: inline-block;
-  padding: 10px 20px;
-	font-size: 1.2em;
-	margin:0;
-	
-}
-.btn .price, .shopping-cart{
-	background: #333;
-	border: 0;
-	margin: 0;
-}
-
-.btn .price {
-	transform: translateX(-10%); padding-right: 15px;
-}
-
-.btn .shopping-cart {
-	transform: translateX(-100%);
-  position: absolute;
-	background: #333;
-	z-index: 1;
-  left: 0;
-  top: 0;
-}
-
-.btn .buy {z-index: 3; font-weight: bolder;}
-
-.btn:hover .price {transform: translateX(-110%);}
-
-.btn:hover .shopping-cart {transform: translateX(0%);}
-
-
-
-.product-image {
-	transition: all 0.3s ease-out;
-	display: inline-block;
-	position: relative;
-	overflow: hidden;
-	height: 100%;
-	float: right;
-	width: 45%;
-	display: inline-block;
-}
-
-#contained img {width: 100%;height: 100%;}
-
-.info {
-    background: rgba(27, 26, 26, 0.9);
-    font-family: 'Bree Serif', serif;
-    transition: all 0.3s ease-out;
-    transform: translateX(-100%);
-    position: absolute;
-    line-height: 1.8;
-    text-align: left;
-    font-size: 105%;
-    cursor: no-drop;
-    color: #FFF;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-}
-
-.info h2 {text-align: center}
-.product-image:hover .info{transform: translateX(0);}
-
-.info ul li{transition: 0.3s ease;}
-.info ul li:hover{transform: translateX(50px) scale(1.3);}
-
-.product-image:hover img {transition: all 0.3s ease-out;}
-.product-image:hover img {transform: scale(1.2, 1.2);}
-
-
-.site-back-top-basic {
-  color: rgba(64, 64, 64, 0.6);
-}
-
-
-.ourActivities{
-  display: block;
-  background-image: radial-gradient(circle at 13% 47%, rgba(140, 140, 140,0.03) 0%, rgba(140, 140, 140,0.03) 25%,transparent 25%, transparent 100%),radial-gradient(circle at 28% 63%, rgba(143, 143, 143,0.03) 0%, rgba(143, 143, 143,0.03) 16%,transparent 16%, transparent 100%),radial-gradient(circle at 81% 56%, rgba(65, 65, 65,0.03) 0%, rgba(65, 65, 65,0.03) 12%,transparent 12%, transparent 100%),radial-gradient(circle at 26% 48%, rgba(60, 60, 60,0.03) 0%, rgba(60, 60, 60,0.03) 6%,transparent 6%, transparent 100%),radial-gradient(circle at 97% 17%, rgba(150, 150, 150,0.03) 0%, rgba(150, 150, 150,0.03) 56%,transparent 56%, transparent 100%),radial-gradient(circle at 50% 100%, rgba(25, 25, 25,0.03) 0%, rgba(25, 25, 25,0.03) 36%,transparent 36%, transparent 100%),radial-gradient(circle at 55% 52%, rgba(69, 69, 69,0.03) 0%, rgba(69, 69, 69,0.03) 6%,transparent 6%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
-}
-
-.aboutvd{
-  
-    width: 700px;
-    height: 400px;
-    margin-left: 50px;
-    border-radius: 20px;
-  
-}
 .navHead{
  font-size: 30px;
   font-weight: 600;
 }
 
-.cards{
-  width: 300px;
-  height: 200px;
-  border: 3px solid transparent;
-    border-image: linear-gradient(to right, #A139B4, lightgreen);
-    border-image-slice: 1;  margin: auto;
-}
-.cardsDiv{
-  display: none;
-}
+
+
 
 
 @media only screen and (max-width: 426px) {
